# api

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.sh  pytest.ini  run.py
api/: app.py  config.py  database.py
database/: src.py
etl/: common.py  sync_firestore.py  sync_incremental.py
models/: src.py
plans/: 2026-05-30-status.md
resolve/: README.md  __init__.py  agency.py  api.py  candidates.py  cli.py  client.py  eda.ipynb  explain.py  features.py  features_rust.py  helpers.py  io.py  llm.py  match.py  match_full.py  match_review.py  match_review_new_output_test.py  pipeline.py  scoring.py  test.py  validation.py
resolve/src/: README.md  analyze_duplicates.py  api.py  eda.ipynb  eda_post_processing.ipynb  explore_tui.py  export_postie.py  features.py  filter_auto_matched.py  helpers.py  llm.py  match.py  match_all_states.py  match_fast.py  pipeline_runner.py  post_processing.py  test_names.py  tests.py
resolve_batch/src/: compare_batch_vs_sequential.py  debug_discrepancy.py  eda.ipynb  helpers.py  match.py
server/: config.py  src.py  test_agency_search.py
server_all_states/: config.py  database.py  src.py
shared/: env.py  models.py
src/: main.rs  string_similarity.rs
test/: src.py
tests/: conftest.py  test_agency.py  test_candidates.py  test_cli.py  test_client.py  test_early_filter.py  test_gates.py  test_integration_resolve.py  test_io.py  test_io_mentions.py  test_llm.py  test_parity.py  test_pipeline_orchestration.py  test_pipeline_stages.py  test_scoring.py  test_validation.py
tools/: explore_tui.py  pipeline_runner.py
(+8 files in other folders)
